<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HealthyLife</string>
    <string name="action_settings">Settings</string>
    <string name="name">私人医生</string>
    <string name="request_name">   你叫什么名字？   \n请告诉我你的名字吧</string>
    <string name="water">水份</string>
    <string name="fat_lv">体脂率</string>
    <string name="lean_body_weight">去脂体重</string>
    <string name="bmi">BMI</string>
    <string name="age">身体年龄</string>
    <string name="home">首页</string>
    <string name="assess">测评</string>
    <string name="my_center">我</string>
    <string name="small_circle">小圈</string>
    <string name="user_name">小简</string>
    <string name="title_req">hi， 欢迎来到私人医生</string>
    <string name="user_id">ID:</string>
    <string name="default_id">1666666</string>
    <string name="eating_plan">饮食计划</string>
    <string name="sport_plan">锻炼计划</string>
    <string name="test_text">如果你无法简洁的表达表达自己的想法，那只说明你还不够了解它.</string>
    <string name="test_title">精选推荐</string>
    <string name="sex">   你的性别是？ \n哈哈哈，虽然很难选择</string>
    <string name="height">你的身高\n嗯，请认真回答这个问题</string>
    <string name="agestr">你的年龄\n偷偷告诉我哈</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="year">岁</string>
    <string name="regist">注册</string>
    <string name="phone">输入手机号</string>
    <string name="pass">输入密码</string>
    <string name="conform">输入验证吗</string>
    <string name="send_pass">发送验证码</string>
    <string name="land">登录</string>
    <string name="have_pass">已有账号？立马去登陆</string>
    <string name="id"> 输入手机号或ID</string>
    <string name="attention">关注5</string>
    <string name="no_user_bg">没有帐号？立马去注册</string>
    <string name="fans">粉丝0</string>
    <string name="camera">拍照</string>
    <string name="pics">图库</string>
    <string name="talk">产品小狗狗，喜欢民谣，热爱生活</string>
    <string name="forget_pas">忘记密码</string>
    <string name="input_pas"> 输入登陆密码</string>
    <string name="sbname">小雷</string>
    <string name="sbdetile">又瘦了好几斤，真开心，身体也强壮了许多</string>
    <string name="title_activity_show_data">ShowDataActivity</string>
    <string name="image_string">头像</string>
    <string name="sex_string">性别</string>
    <string name="name_string">昵称</string>
    <string name="born_string">出生年月</string>
    <string name="height_string">身高</string>
    <string name="weight_string">体重</string>
    <string name="bmi_string">BMI</string>
    <string name="fat_string">脂肪</string>
    <string name="fat_lv_string">脂肪率</string>
    <string name="lean_fat_string">去脂体重</string>
    <string name="water_string">水份</string>
    <string name="jianjie">简介</string>
    <string name="ling">0.0</string>
    <string name="danwei">kg</string>
    <string name="quit_land">退出登录</string>
    <string name="title_activity_set_up">SetUpActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>