<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/image_string" />

            <ImageView
                android:id="@+id/change_my_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/my_pic" />
        </RelativeLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/sex_string" />

            <TextView
                android:id="@+id/sexchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginLeft="10dp"
                android:text="女"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/name_string" />

            <EditText
                android:id="@+id/choose_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:hint="@string/sbname"
                android:background="@null"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/born_string" />

            <EditText
                android:id="@+id/choose_born"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:hint="1990-01-01"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/height_string" />

            <EditText
                android:id="@+id/choose_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:hint="@string/ling"
                android:background="@null"
                android:textColor="@color/strick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="cm"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/weight_string" />

            <EditText
                android:id="@+id/choose_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:hint="@string/ling"
                android:background="@null"
                android:textColor="@color/strick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/danwei"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/bmi_string" />

            <EditText
                android:id="@+id/choose_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:hint="@string/ling"
                android:background="@null"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/fat_string" />

            <EditText
                android:id="@+id/choose_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:hint="0.0"
                android:background="@null"
                android:textColor="@color/strick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/danwei"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/fat_lv_string" />

            <EditText
                android:id="@+id/choose_fat_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:hint="0.0"
                android:background="@null"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/lean_fat_string" />

            <EditText
                android:id="@+id/choose_lean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:hint="0.0"
                android:textColor="@color/strick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/danwei"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/water_string" />

            <EditText
                android:id="@+id/choose_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:hint="0.0"
                android:textColor="@color/strick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/danwei"
                android:textColor="@color/strick" />
        </LinearLayout>

        <include layout="@layout/strick_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/jianjie"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@drawable/input_jianjie"
                android:gravity="top"
                android:hint="@string/jianjie"
                android:maxLines="50"

                android:singleLine="false" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/qiut_land"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/regist_bt"
                    android:text="@string/quit_land" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>