<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    		android:layout_centerInParent="true"
    		android:gravity="center"
    		android:textColor="@color/gray"
            android:text="@string/sex" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/backsex"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="71dp"
            android:background="@null"
            android:textColor="@color/gray"
            android:text="@string/back" />

        <Button
            android:id="@+id/next_sex"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="38dp"
            android:layout_toRightOf="@+id/backsex"
            android:background="@drawable/next_bg"
            android:textColor="@color/white"
            android:text="@string/next" />
        
    </RelativeLayout>

</LinearLayout>
