<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:background="@color/bg_color_press"
    android:layout_height="50dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/land"
        android:textSize="16sp"
        android:textColor="@color/white"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/input_id"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/strick"
            android:cursorVisible="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/id">

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/input_pass"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/strick"
            android:cursorVisible="false"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_pas"
            android:password="true">

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/land"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/regist_bt"
            android:onClick="onclick"
            android:text="@string/land"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/regist_user"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="onclick"
            android:textSize="12sp"
            android:textColor="@color/strick"
            android:text="@string/no_user_bg"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/land"
            android:layout_alignEnd="@+id/land" />
        <Button
            android:id="@+id/forget_p"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginRight="40dp"
            android:text="@string/forget_pas"
            android:layout_above="@+id/land"
            android:textColor="@color/strick"
            android:textSize="12sp"
            android:layout_alignRight="@+id/land"
            android:layout_alignEnd="@+id/land"
            android:layout_below="@+id/regist_user" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"></LinearLayout>

</LinearLayout>